[package]
name = "fast-webp"
version = "0.1.1"
authors = ["teamofey <timarnd06@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Fast WebP encoder for Rust image buffers and proxy image payloads."
homepage = "https://github.com/Teamofeyy/fast-webp"
repository = "https://github.com/Teamofeyy/fast-webp.git"
documentation = "https://docs.rs/fast-webp"
keywords = ["image", "webp", "conversion", "encoder", "proxy"]
categories = ["encoding", "multimedia::images"]
readme = "README.md"

[dependencies]
libwebp-sys = "0.9.3"
image = { version = "^0.25.0", default-features = false, optional = true }

[features]
default = ["image"]
image = ["dep:image"]
image-codecs = ["image", "image/jpeg", "image/png"]

[dev-dependencies]
criterion = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webp = "0.3"

[[bench]]
name = "convert"
harness = false
required-features = ["image-codecs"]

[[example]]
name = "proxy_bytes"
required-features = ["image-codecs"]
